Added the use of charsets to avoid having exceptions